WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18732
SQUIRRELFISH: exceptions thrown by native constructors are ignored
https://bugs.webkit.org/show_bug.cgi?id=18732
Summary
SQUIRRELFISH: exceptions thrown by native constructors are ignored
Cameron Zwarich (cpst)
Reported
2008-04-24 21:45:01 PDT
This problem is seen in the JavaScriptCore regression test js1_5/Regress/regress-118849.js. There is only one easy way of fixing this, adding an exception check to op_construct, so hopefully that doesn't regress performance.
Attachments
Proposed patch
(1.01 KB, patch)
2008-04-24 21:56 PDT
,
Cameron Zwarich (cpst)
mjs
: review+
Details
Formatted Diff
Diff
Revised proposed patch
(1.04 KB, patch)
2008-04-24 22:05 PDT
,
Cameron Zwarich (cpst)
mjs
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2008-04-24 21:56:15 PDT
Created
attachment 20808
[details]
Proposed patch Here's the natural patch. It fixes the test, and is either a slight speedup on SunSpider or no regression.
Maciej Stachowiak
Comment 2
2008-04-24 21:58:37 PDT
Comment on
attachment 20808
[details]
Proposed patch r=me
Cameron Zwarich (cpst)
Comment 3
2008-04-24 22:05:59 PDT
Created
attachment 20809
[details]
Revised proposed patch We should do the exception check before writing to any register. The code currently doing the check after writing is incorrect. This version does slightly better on SunSpider, for a pretty definite 0.4% progression.
Maciej Stachowiak
Comment 4
2008-04-24 22:06:46 PDT
Comment on
attachment 20809
[details]
Revised proposed patch r=me
Oliver Hunt
Comment 5
2008-04-25 01:33:30 PDT
Landed r 32538
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug