Bug 18732: SQUIRRELFISH: exceptions thrown by native constructors are ignored <https://bugs.webkit.org/show_bug.cgi?id=18732>

Reviewed by Maciej

More bounds checking.


git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@32544 268f45cc-cd09-0410-ab3c-d52691b4dbfc